<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="conversation_select_messages">Select messages</string>
    <string name="conversation_search_messages">Messages</string>
    <string name="conversation_jump_to_date">Jump to date</string>
    <string name="conversation_edit_revision">Revision %1$d</string>
</resources>
