...
                            onClick = { enterOpen = true },
                        )
                    }
                }
            }
            item {
                SettingsGroup(modifier = Modifier.testTag("appearance.custom_emoji.group")) {
                    row("custom_emoji") { context ->
                        SettingsLink(
                            context = context,
                            title = stringResource(R.string.custom_emoji),
                            onClick = onOpenCustomEmoji,
                        )
...
